# sick_safetyscanners_base-release

./: 0001-Release-for-RevyOS-riscv64.patch  CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  sick_safetyscanners_baseConfig.cmake  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
debian/patches/: 01-add-cstdint-header.patch  series
include/sick_safetyscanners_base/: SickSafetyscanners.h  Types.h
include/sick_safetyscanners_base/cola2/: ChangeCommSettingsCommand.h  CloseSession.h  Cola2Session.h  Command.h  CreateSession.h  FieldGeometryVariableCommand.h  FieldHeaderVariableCommand.h  FindMeCommand.h  MethodCommand.h  MonitoringCaseVariableCommand.h  VariableCommand.h
include/sick_safetyscanners_base/communication/: TCPClient.h
include/sick_safetyscanners_base/data_processing/: ParseApplicationData.h  ParseApplicationNameData.h  ParseConfigMetadata.h  ParseDataHeader.h  ParseDatagramHeader.h  ParseDerivedValues.h  ParseDeviceName.h  ParseDeviceStatus.h  ParseFieldGeometryData.h  ParseFieldHeaderData.h  ParseFieldSetsData.h  ParseFirmwareVersion.h  ParseGeneralSystemState.h  (+15 more)
rpm/: ros-galactic-sick-safetyscanners-base.spec  ros-humble-sick-safetyscanners-base.spec  ros-iron-sick-safetyscanners-base.spec  template.spec
src/: SickSafetyscanners.cpp
src/cola2/: ChangeCommSettingsCommand.cpp  CloseSession.cpp  Cola2Session.cpp  Command.cpp  CreateSession.cpp  FindMeCommand.cpp
src/communication/: TCPClient.cpp  UDPClient.cpp
src/data_processing/: ParseConfigMetadata.cpp
(+19 files in other folders)
