<?xml version="1.0"?>
<package format="3">
  <name>sick_safetyscanners_base</name>
  <version>1.0.3</version>
  <description>Provides an Interface to read the sensor output of a SICK
  Safety Scanner</description>

  <maintainer email="puck@fzi.de">Lennart Puck</maintainer>

  <author>Lennart Puck</author>

  <license>ALv2</license>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>libboost-chrono-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>libboost-thread-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <build_type>cmake</build_type>

  </export>
</package>
